--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,6 +41,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QE'
 - !lcsh 'Paleontology'
+- GITenberg
 title: 'Extinct Monsters
 
   A Popular Account of Some of the Larger Forms of Ancient Animal Life'
